idea/testData/script/definition/highlighting/errorResolver/script.kts
<info descr="Info"></info><info descr="Debug"></info><warning descr="Warning"></warning><error descr="Fatal"></error><error descr="Error"></error>
1 + 1

// CHECK_WARNINGS
// CHECK_INFOS